tryingdevToGit/force-app/main/default/objects/Bookings__c/Bookings__c.object-meta.xml
<CustomObject>
    <label>Bookings</label>
    <nameField>
        <label>Bookings Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bookings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>