tryingdevToGit/force-app/main/default/objects/Bookings__c/fields/Agent_info__c.field-meta.xml
<CustomField>
    <fullName>Agent_info__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Agent</label>
    <referenceTo>Agent__c</referenceTo>
    <relationshipLabel>Bookings</relationshipLabel>
    <relationshipName>Bookings</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>