tryingdevToGit/force-app/main/default/objects/Bookings__c/fields/Discounted_Price__c.field-meta.xml
<CustomField>
    <fullName>Discounted_Price__c</fullName>
    <formula>select_Package__r.Cost__c -  (select_Package__r.Cost__c * select_Package__r.Discount_Available__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discounted Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>