tryingdevToGit/force-app/main/default/objects/Bookings__c/fields/select_Package__c.field-meta.xml
<CustomField>
    <fullName>select_Package__c</fullName>
    <label>Package</label>
    <referenceTo>Package__c</referenceTo>
    <relationshipLabel>Bookings</relationshipLabel>
    <relationshipName>Bookings</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>