tryingdevToGit/force-app/main/default/objects/Bookings__c/fields/Trip_Date__c.field-meta.xml
<CustomField>
    <fullName>Trip_Date__c</fullName>
    <inlineHelpText>Pick a date after 15 days from today.</inlineHelpText>
    <label>Trip Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>