tryingdevToGit/force-app/main/default/objects/Bookings__c/validationRules/book_before_15_days.validationRule-meta.xml
<ValidationRule>
    <fullName>book_before_15_days</fullName>
    <active>true</active>
    <errorConditionFormula>(Trip_Date__c - today()) &lt; 15</errorConditionFormula>
    <errorMessage>Cannot book for such a short notice.</errorMessage>
</ValidationRule>